[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "Janeway"
version = "1.8.0"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "Django>=4.2",
]

[project.optional-dependencies]
dev = [
    "ruff",
]

[tool.ruff]
line-length = 88 # Matches ruff and black formatting
target-version = "py39"
include = ["src/**/*.py"]
exclude = [
    "src/__pycache__",
    "src/static",
    "src/media",
    "src/files",
    "src/plugins",
    "src/dynamicsites",
    "src/ebooklib",
    "src/foundationform",
    "src/transform/cassius",
]
[tool.tox]
env_list = ["py39", "py310", "py311", "py312"]
[tool.tox.testenv]
commands = [
    "python src/manage.py test"
]
[tool.tox.testenv.deps]
list = ["Django==4.2", "file:requirements.txt"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
